--- a/views/index.pug
+++ b/views/index.pug
@@ -2,9 +2,10 @@ extends layout
 
 block content
     div
+        
+    div.text-center
         span
             a(href='/addusers') Register
-    div.text-center
         form(class="form-signin" method="POST" action="/users/login")
             #error
                 if error
@@ -27,4 +28,4 @@ block content
             button(class=buttonClass type="submit") Sign in
             
             - var pClasses=['mt-5', 'mb-3', 'text-muted'];
-            p(class=pClasses) © 2017-2018
+            //- p(class=pClasses) © 2017-2018
